--- a/react-js-buy/public/index.html
+++ b/react-js-buy/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link href="//fonts.googleapis.com/css?family=Work+Sans:400,700" rel="stylesheet" type="text/css" media="all">
+    <link href="//fonts.googleapis.com/css?family=Work+Sans:600" rel="stylesheet" type="text/css" media="all">
     <script src="https://swymprem.azureedge.net/code/swym-notepad-v2-shopify.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
@@ -14,7 +16,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Alki's Boutique headless</title>
+    <title>Alki's Boutique (Headless!)</title>
   </head>
   <body>
     <div id="root"></div>
